Warmup the cache for hopefully some faster builds in the future

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -49,11 +49,11 @@ jobs:
         run: ./gradlew licenseReleaseReport
       - name: Build for testing
         run: ./gradlew assembleDebugAndroidTest
-      - name: Instrumentation tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 30
-          target: google_apis
-          profile: pixel_3a
-          disable-animations: false
-          script: ./gradlew connectedDebugAndroidTest
+#      - name: Instrumentation tests
+#        uses: reactivecircus/android-emulator-runner@v2
+#        with:
+#          api-level: 30
+#          target: google_apis
+#          profile: pixel_3a
+#          disable-animations: false
+#          script: ./gradlew connectedDebugAndroidTest
