--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -39,6 +39,10 @@ jobs:
           MIXPANEL_PROJECT_TOKEN: ${{ secrets.MIXPANEL_PROJECT_TOKEN_TEST }}
       - uses: actions/cache@v1
         with:
+          path: ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
+      - uses: actions/cache@v1
+        with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
       - name: Download Apollo Schema
@@ -49,11 +53,11 @@ jobs:
         run: ./gradlew licenseReleaseReport
       - name: Build for testing
         run: ./gradlew assembleDebugAndroidTest
-      - name: Instrumentation tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 30
-          target: google_apis
-          profile: pixel_3a
-          disable-animations: false
-          script: ./gradlew connectedDebugAndroidTest
+    #  - name: Instrumentation tests
+    #    uses: reactivecircus/android-emulator-runner@v2
+    #    with:
+    #      api-level: 30
+    #      target: google_apis
+    #      profile: pixel_3a
+    #      disable-animations: false
+    #      script: ./gradlew connectedDebugAndroidTest
