--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -59,5 +59,6 @@ jobs:
           api-level: 28
           arch: x86_64
           target: google_apis
+          profile: pixel_3a
           disable-animations: false
           script: ./gradlew connectedDebugAndroidTest
