--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -35,6 +35,11 @@
             android:theme="@style/Hedvig.Theme" />
 
         <activity
+            android:name=".feature.onboarding.OnboardingMockActivity"
+            android:label="Onboarding Mock Screen"
+            android:theme="@style/Hedvig.Theme" />
+
+        <activity
             android:name=".feature.chat.ChatMockActivity"
             android:label="Chat Mock Screen"
             android:theme="@style/Hedvig.Theme" />
