--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -63,6 +63,44 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Create Lokalise secret
+        run: |
+          cat <<EOT > lokalise.properties
+          id=${LOKALISE_ID}
+          token=${LOKALISE_TOKEN}
+        env:
+          LOKALISE_ID: ${{ secrets.LOKALISE_ID }}
+          LOKALISE_TOKEN: ${{ secrets.LOKALISE_TOKEN }}
+      - name: Create Adyen secret
+        run: |
+          cat <<EOT > app/src/debug/res/values/adyen.xml
+          <?xml version="1.0" encoding="utf-8"?>
+          <resources>
+              <string name="ADYEN_PUBLIC_KEY" translatable="false">${ADYEN_PUBLIC_KEY}</string>
+              <string name="ADYEN_MERCHANT_ACCOUNT" translatable="false">${ADYEN_MERCHANT_ACCOUNT}</string>
+          </resources>
+          EOT
+        env:
+          ADYEN_PUBLIC_KEY: ${{ secrets.ADYEN_PUBLIC_KEY_TEST }}
+          ADYEN_MERCHANT_ACCOUNT: ${{ secrets.ADYEN_MERCHANT_ACCOUNT_TEST }}
+      - name: Create Mixpanel secret
+        run: |
+          cat <<EOT > app/src/debug/res/values/mixpanel.xml
+          <?xml version="1.0" encoding="utf-8" ?>
+          <resources>
+              <string name="MIXPANEL_PROJECT_TOKEN" translatable="false">${MIXPANEL_PROJECT_TOKEN}</string>
+          </resources>
+          EOT
+        env:
+          MIXPANEL_PROJECT_TOKEN: ${{ secrets.MIXPANEL_PROJECT_TOKEN_TEST }}
+      - uses: actions/cache@v1
+        with:
+          path: ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
+      - uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
       - run: ./gradlew lint
       - uses: yutailang0119/action-android-lint@v1.0.2
         with:
