Integrate with adyen to connect payout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -281,6 +281,9 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".feature.adyen.payout.AdyenConnectPayoutActivity"
+            android:launchMode="singleTask" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
