--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -117,6 +117,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: Homebrew/actions/setup-homebrew@master
       - run: brew install ktlint
       - name: run ktlint
         run: |
