--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -120,6 +120,7 @@ jobs:
       - uses: Homebrew/actions/setup-homebrew@master
       - run: brew install ktlint
       - name: run ktlint
+        continue-on-error: true
         run: |
           ktlint --reporter=checkstyle,output=build/ktlint-report-in-checkstyle-format.xml
       - uses: yutailang0119/action-ktlint@v1.0.0
