Start using the right mutation for tokenizing payout details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -317,7 +317,10 @@
         <receiver android:name=".feature.chat.service.ChatMessageNotificationReceiver" />
 
         <service
-            android:name=".feature.adyen.AdyenDropInService"
+            android:name=".feature.adyen.payin.AdyenPayinDropInService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".feature.adyen.payout.AdyenPayoutDropInService"
             android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
