--- a/onboarding/src/main/AndroidManifest.xml
+++ b/onboarding/src/main/AndroidManifest.xml
@@ -5,13 +5,45 @@
 
     <dist:module
         dist:instant="true"
-        dist:title="@string/title_onboarding">
+        dist:onDemand="false"
+        dist:title="Onboarding">
         <dist:delivery>
             <dist:install-time />
         </dist:delivery>
         <dist:fusing dist:include="false" />
     </dist:module>
+
     <application>
+
+        <activity
+            android:name=".embark.ui.MoreOptionsActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTask"
+            android:theme="@style/Hedvig.Theme"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
+            android:name="com.hedvig.onboarding.chooseplan.ui.ChoosePlanActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTask"
+            android:theme="@style/Hedvig.Theme"
+            android:windowSoftInputMode="adjustResize">
+
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data
+                    android:host="instantapptest.dev.hedvigit.com"
+                    android:pathPrefix="/chooseplan"
+                    android:scheme="https" />
+
+            </intent-filter>
+
+        </activity>
 
         <activity
             android:name=".embark.ui.EmbarkActivity"
@@ -21,18 +53,60 @@
             android:theme="@style/Hedvig.Theme"
             android:windowSoftInputMode="adjustResize">
 
-            <intent-filter
-                android:autoVerify="true">
+            <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:host="instantapptest.dev.hedvigit.com" />
-                <data android:path="/onboarding" />
-                <data android:scheme="https" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="http" />
+                <data
+                    android:host="instantapptest.dev.hedvigit.com"
+                    android:pathPrefix="/onboarding"
+                    android:scheme="https" />
+
             </intent-filter>
 
         </activity>
+
+        <activity android:name=".mocks.MockOnboardingActivity">
+
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data
+                    android:host="instantapptest.dev.hedvigit.com"
+                    android:pathPrefix="/onboardingmock"
+                    android:scheme="https" />
+
+            </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".mocks.MockEmbarkActivity"
+            android:label="Embark Mock Screen"
+            android:theme="@style/Hedvig.Theme">
+
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data
+                    android:host="instantapptest.dev.hedvigit.com"
+                    android:pathPrefix="/embarkmock"
+                    android:scheme="https" />
+
+            </intent-filter>
+
+        </activity>
+
     </application>
 </manifest>
