Move default url to onboarding manifest

--- a/onboarding/src/main/AndroidManifest.xml
+++ b/onboarding/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
 
             </intent-filter>
 
+            <meta-data
+                android:name="default-url"
+                android:value="https://instantapptest.dev.hedvigit.com/chooseplan" />
+
         </activity>
 
         <activity
