Add action for running unit tests when creating a pr

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -52,6 +52,8 @@ jobs:
         run: ./gradlew app:downloadStrings
       - name: Generate License-report
         run: ./gradlew licenseReleaseReport
+      - name: Unit tests
+        run: ./gradlew testDebugUnitTest
       - name: Instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
