Show change address intro view when clicking button in home tab

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -284,6 +284,11 @@
         <activity
             android:name=".feature.adyen.payout.AdyenConnectPayoutActivity"
             android:launchMode="singleTask" />
+        <activity
+                android:name=".feature.home.ui.changeaddress.ChangeAddressActivity"
+                android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+                android:launchMode="singleTask"
+                android:windowSoftInputMode="adjustResize" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
