Add mock activity for change address with options to view all existing view states

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -88,6 +88,11 @@
 
         <activity android:name=".feature.payment.PaymentMockActivity" />
 
+        <activity
+            android:name=".feature.changeaddress.ChangeAddressMockActivity"
+            android:label="Change Address Mock Screen"
+            android:theme="@style/Hedvig.Theme" />
+
     </application>
 
 </manifest>
