Fix pr comments

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -88,10 +88,7 @@
 
         <activity android:name=".feature.payment.PaymentMockActivity" />
 
-        <activity
-            android:name=".feature.changeaddress.ChangeAddressMockActivity"
-            android:label="Change Address Mock Screen"
-            android:theme="@style/Hedvig.Theme" />
+        <activity android:name=".feature.changeaddress.ChangeAddressMockActivity"  />
 
     </application>
 
