APP-10: Moving flow intro (#493)
* Start change address activity when pressing change address button

* Add view model and use cases for address change - check if user is eligible or have other upcoming address changes and set view state accordingly. Add integration tests.

* Add mock activity for change address with options to view all existing view states

* Add button icon and hide content when loading

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -88,6 +88,8 @@
 
         <activity android:name=".feature.payment.PaymentMockActivity" />
 
+        <activity android:name=".feature.changeaddress.ChangeAddressMockActivity"  />
+
     </application>
 
 </manifest>
