--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -293,10 +293,16 @@
             android:name=".feature.adyen.payout.AdyenConnectPayoutActivity"
             android:launchMode="singleTask" />
         <activity
-                android:name=".feature.home.ui.changeaddress.ChangeAddressActivity"
-                android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
-                android:launchMode="singleTask"
-                android:windowSoftInputMode="adjustResize" />
+            android:name=".feature.home.ui.changeaddress.ChangeAddressActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
+
+        <activity
+            android:name=".feature.zignsec.SimpleSignAuthenticationActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustResize" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
