--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -78,6 +78,12 @@ jobs:
           target: google_apis
           profile: pixel_3a
           script: ./gradlew connectedDebugAndroidTest
+      - name: Upload test reports
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-reports
+          path: app/build/reports
   lint:
     runs-on: ubuntu-latest
     steps:
