--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -293,6 +293,8 @@
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".feature.home.ui.changeaddress.result.ChangeAddressResultActivity" />
 
+        <activity android:name=".feature.offer.quotedetail.QuoteDetailActivity" />
+
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_hedvig_h" />
