--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -86,6 +86,11 @@
             android:label="Trustly Mock Screen"
             android:theme="@style/Hedvig.Theme" />
 
+        <activity
+            android:name=".feature.checkout.CheckoutMockActivity"
+            android:label="Checkout Mock Screen"
+            android:theme="@style/Hedvig.Theme" />
+
         <activity android:name=".feature.payment.PaymentMockActivity" />
 
         <activity android:name=".feature.changeaddress.ChangeAddressMockActivity" />
