APP-544: Validate checkout input (#597)
* Query signMethodForQuotes and add to view state

* Set sign button text and icon depending on SignMethod

* Add checkout view with mock data

* Add validation and update state from viewmodel

* Validate inputs when view focus is lost

* Update app/src/debug/AndroidManifest.xml

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -86,6 +86,10 @@
             android:label="Trustly Mock Screen"
             android:theme="@style/Hedvig.Theme" />
 
+        <activity
+            android:name=".feature.checkout.CheckoutMockActivity"
+            android:label="Checkout Mock Screen" />
+
         <activity android:name=".feature.payment.PaymentMockActivity" />
 
         <activity android:name=".feature.changeaddress.ChangeAddressMockActivity" />
