--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,7 +2,7 @@ name: PR
 
 on: pull_request
 jobs:
-  build:
+  integration_test:
     runs-on: macos-latest
     steps:
       - name: Checkout
@@ -68,8 +68,6 @@ jobs:
         run: ./gradlew app:downloadStrings
       - name: Generate License-report
         run: ./gradlew licenseReleaseReport
-      - name: Unit tests
-        run: ./gradlew testDebugUnitTest
       - name: Instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -84,6 +82,69 @@ jobs:
         with:
           name: test-reports
           path: app/build/reports
+  unit_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Create Lokalise secret
+        run: |
+          cat <<EOT > lokalise.properties
+          id=${LOKALISE_ID}
+          token=${LOKALISE_TOKEN}
+          EOT
+        env:
+          LOKALISE_ID: ${{ secrets.LOKALISE_ID }}
+          LOKALISE_TOKEN: ${{ secrets.LOKALISE_TOKEN }}
+      - name: Create Adyen secret
+        run: |
+          cat <<EOT > app/src/debug/res/values/adyen.xml
+          <?xml version="1.0" encoding="utf-8"?>
+          <resources>
+              <string name="ADYEN_PUBLIC_KEY" translatable="false">${ADYEN_PUBLIC_KEY}</string>
+              <string name="ADYEN_MERCHANT_ACCOUNT" translatable="false">${ADYEN_MERCHANT_ACCOUNT}</string>
+          </resources>
+          EOT
+        env:
+          ADYEN_PUBLIC_KEY: ${{ secrets.ADYEN_PUBLIC_KEY_TEST }}
+          ADYEN_MERCHANT_ACCOUNT: ${{ secrets.ADYEN_MERCHANT_ACCOUNT_TEST }}
+      - name: Create Mixpanel secret
+        run: |
+          cat <<EOT > app/src/debug/res/values/mixpanel.xml
+          <?xml version="1.0" encoding="utf-8" ?>
+          <resources>
+              <string name="MIXPANEL_PROJECT_TOKEN" translatable="false">${MIXPANEL_PROJECT_TOKEN}</string>
+          </resources>
+          EOT
+        env:
+          MIXPANEL_PROJECT_TOKEN: ${{ secrets.MIXPANEL_PROJECT_TOKEN_TEST }}
+      - name: Create Shake secret
+        run: |
+          cat <<EOT > app/src/debug/res/values/shake.xml
+          <?xml version="1.0" encoding="utf-8" ?>
+          <resources>
+              <string name="SHAKE_CLIENT_ID" translatable="false">${SHAKE_CLIENT_ID}</string>
+              <string name="SHAKE_CLIENT_SECRET" translatable="false">${SHAKE_CLIENT_SECRET}</string>
+          </resources>
+          EOT
+        env:
+          SHAKE_CLIENT_ID: ${{ secrets.SHAKE_CLIENT_ID }}
+          SHAKE_CLIENT_SECRET: ${{ secrets.SHAKE_CLIENT_SECRET }}
+      - uses: actions/cache@v1
+        with:
+          path: ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
+      - uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+      - name: Download Apollo Schema
+        run: ./gradlew apollo:downloadApolloSchema
+      - name: Download Translations
+        run: ./gradlew app:downloadStrings
+      - name: Generate License-report
+        run: ./gradlew licenseReleaseReport
+      - name: Unit tests
+        run: ./gradlew testDebugUnitTest
   lint:
     runs-on: ubuntu-latest
     steps:
