--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -209,11 +209,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: Homebrew/actions/setup-homebrew@master
-      - run: brew install ktlint --build-from-source ktlint
+      - run: brew install xmlstarlet ktlint --build-from-source ktlint
       - name: run ktlint
         continue-on-error: true
         run: |
-          ktlint --reporter=checkstyle,output=build/ktlint-report-in-checkstyle-format.xml
+          ktlint "\!**/generated/**" "**/src/**/*.kt*" --reporter=checkstyle,output=build/ktlint-report-in-checkstyle-format.xml
       - uses: yutailang0119/action-ktlint@v1.0.0
         with:
           xml_path: build/ktlint-report-in-checkstyle-format.xml
+      - run: |
+          if [[ $(xmllint --xpath "count(//file)" build/ktlint-report-in-checkstyle-format.xml) -gt 0 ]]; then
+              exit 1;
+          fi;
