--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.hedvig.app">
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:usesCleartextTraffic="true"
@@ -95,6 +96,10 @@
 
         <activity android:name=".feature.changeaddress.ChangeAddressMockActivity" />
 
+        <activity
+            android:name=".feature.tracking.TrackingLogActivity"
+            android:launchMode="singleTop" />
+
         <meta-data
             android:name="com.mixpanel.android.MPConfig.DisableEmulatorBindingUI"
             android:value="true" />
@@ -108,7 +113,13 @@
             <meta-data
                 android:name="com.hedvig.app.ShakeInitializer"
                 android:value="androidx.startup" />
+
+            <meta-data
+                android:name="com.hedvig.app.feature.tracking.TrackingInitializer"
+                android:value="androidx.startup" />
         </provider>
+
+        <service android:name=".feature.tracking.TrackingShortcutService" />
 
     </application>
 
