--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -329,12 +329,8 @@
 
         <receiver android:name=".feature.chat.service.ChatMessageNotificationReceiver" />
 
-        <service
-            android:name=".feature.adyen.payin.AdyenPayinDropInService"
-            android:permission="android.permission.BIND_JOB_SERVICE" />
-        <service
-            android:name=".feature.adyen.payout.AdyenPayoutDropInService"
-            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service android:name=".feature.adyen.payin.AdyenPayinDropInService" />
+        <service android:name=".feature.adyen.payout.AdyenPayoutDropInService" />
 
         <provider
             android:name="androidx.startup.InitializationProvider"
