--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -187,6 +187,13 @@
             android:name=".feature.offer.ui.checkout.CheckoutActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity
+            android:name=".feature.crossselling.ui.CrossSellingResultActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/Hedvig.Theme"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
             android:name=".feature.referrals.ReferralsReceiverActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:launchMode="singleTask"
