APP-750: Insurely intro screen (#681)
* Add intro screen for insurely

* Pass selected insurance provider name to AskForPriceActivity

* Add feature flag

* Remove view model and pass title as argument

* Add AskForPriceActivity in development screen

* Register result listener and continue if canceled

* Add string resources

* Fix PR comments

* Add missing string resource

* Run ktlint

* Fix imports

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -301,6 +301,8 @@
 
         <activity android:name=".feature.offer.quotedetail.QuoteDetailActivity" />
 
+        <activity android:name=".feature.embark.passages.previousinsurer.askforprice.AskForPriceInfoActivity" />
+
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_hedvig_h" />
