Change the file generated from apollo gradle task to a .graphqls file
The schema.json genarated before can now be deleted and the graphqls
will be used instead, providing easy indexing of all GraphQL types

--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,12 @@ sentry.properties
 *.li
 .classpath
 .project
-schema.json
 mapping.txt
 
 # graphql
 .graphqlconfig
+schema.json
+**/*.graphqls
 
 # adyen credentials
 adyen.xml
