--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ org.gradle.configureondemand=false
 systemProp.org.gradle.android.cache-fix.ignoreVersionCheck=true
 android.useAndroidX=true
 com.apollographql.apollo.endpoint=https://graphql.dev.hedvigit.com/graphql
-com.apollographql.apollo.schema=src/main/graphql/com/hedvig/android/owldroid/schema.json
+com.apollographql.apollo.schema=src/main/graphql/com/hedvig/android/owldroid/schema.graphqls
