--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -48,6 +48,8 @@
             android:label="Embark Mock Screen"
             android:theme="@style/Hedvig.Theme" />
 
+        <activity android:name=".feature.embark.RecorderScaffoldActivity" />
+
         <activity
             android:name=".feature.offer.OfferMockActivity"
             android:label="Offer Mock Screen"
