Extract commonConfig out to buildSrc()
Move kotlinOptions into the commonConfig too
Bump gradle version

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ systemProp.org.gradle.android.cache-fix.ignoreVersionCheck=true
 android.useAndroidX=true
 com.apollographql.apollo.endpoint=https://graphql.dev.hedvigit.com/graphql
 com.apollographql.apollo.schema=src/main/graphql/com/hedvig/android/owldroid/schema.json
+android.experimental.cacheCompileLibResources=true
+android.experimental.enableSourceSetPathsMap=true
