--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ license = "0.8.90"
 lokalise = "1.4.1"
 
 # Other versions sorted alphabetically
-accompanist = "0.19.0"
+accompanist = "0.20.0"
 androidx-compose = "1.0.4"
 androidx-datastore = "1.0.0"
 androidx-espresso = "3.4.0"
@@ -87,6 +87,8 @@ kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk7", version.re
 
 accompanist-insets = { module = "com.google.accompanist:accompanist-insets", version.ref = "accompanist" }
 accompanist-insetsUi = { module = "com.google.accompanist:accompanist-insets-ui", version.ref = "accompanist" }
+accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanist" }
+accompanist-pagerIndicators = { module = "com.google.accompanist:accompanist-pager-indicators", version.ref = "accompanist" }
 
 adyen = { module = "com.adyen.checkout:drop-in", version.ref = "adyen" }
 
