--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -307,6 +307,7 @@
         <activity android:name=".feature.embark.passages.previousinsurer.askforprice.AskForPriceInfoActivity" />
         <activity android:name=".feature.crossselling.ui.detail.CrossSellDetailActivity" />
         <activity android:name=".feature.crossselling.ui.detail.CrossSellFaqActivity" />
+        <activity android:name=".feature.sunsetting.ForceUpgradeActivity" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
